[gd_scene load_steps=9 format=3 uid="uid://r1waoydf2juh"]

[ext_resource type="Script" uid="uid://dkhtirywg51tj" path="res://gameplay/npcs/camote.gd" id="1_6fcum"]
[ext_resource type="Texture2D" uid="uid://ckapoc1avxxvm" path="res://assets/Road Racers Adrenaline Assets/Vehicles/civilian_vehicles_coche.png" id="2_ncylt"]
[ext_resource type="PackedScene" uid="uid://rlhigf5m3j14" path="res://ui/popup_location.tscn" id="3_0ekxs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_da7br"]
atlas = ExtResource("2_ncylt")
region = Rect2(224, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4ad0"]
atlas = ExtResource("2_ncylt")
region = Rect2(320, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_82rp0"]
atlas = ExtResource("2_ncylt")
region = Rect2(224, 96, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8n406"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_da7br")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4ad0")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_82rp0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qe5w1"]
height = 48.0

[node name="Camote" type="Area2D" groups=["civilian"]]
script = ExtResource("1_6fcum")

[node name="CarSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8n406")
animation = &"death"
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_qe5w1")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_desired_distance = 50.0
target_desired_distance = 50.0
path_max_distance = 10.0
avoidance_enabled = true
debug_enabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="PopupLocation" parent="." instance=ExtResource("3_0ekxs")]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
